--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/stylesheet/customerManageCSSFile.css">
     <link rel="stylesheet" href="assets/stylesheet/buttonAnmation.css">
     <link rel="stylesheet" href="assets/stylesheet/storeManageCSSFile.css">
+    <link rel="stylesheet" href="assets/stylesheet/placeOrderCSSFile.css">
 
     <style>
         @media all and (min-width: 769px) and (max-width: 1024px){
@@ -691,10 +692,10 @@
 
                     <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
                         <div class="navbar-nav position container topBotomBordersIn">
-                            <span class="nav-link active" aria-current="page" href="">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                            <span id="customerTab" class="nav-link active" href="customerManage.html">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span id="dashboard-tab" class="nav-link active" aria-current="page" href="">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span id="customer-tab" class="nav-link active" href="customerManage.html">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                             <span id="store-tab" class="nav-link active" href="storeManage.html">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                            <span class="nav-link active" href="placeOrderManage.html">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span id="placeOrder-tab" class="nav-link active" href="placeOrderManage.html">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                             <span class="nav-link active" href="#about">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 
                         </div>
@@ -1160,7 +1161,145 @@
 </section>
 
 <!--Place order-->
-<section></section>
+<section id="placeOrder-sec">
+    <div class="col-6 placeOrderForm">
+        <form class="row g-3 ">
+            <div class="titleOrder container">
+                <h3 class="purpleTextColor">Place Your Orders</h3>
+            </div>
+            <div class="col-12 margin-bottom">
+                <label for="inputOrderId" class="form-label">Order Id :</label>
+                <input type="text" class="form-control" id="inputOrderId-" placeholder="O001">
+            </div>
+
+            <div class="row">
+                <div class="col-5 margin-bottom">
+                    <label for="inputCustomerId" class="form-label">Customer Id :</label>
+                    <input type="text" id="inputCustomerId-" class="form-control" placeholder="customer id" aria-label="Customer city">
+                </div>
+                <div class="col-7 margin-bottom">
+                    <label for="inputCustomerName" class="form-label inputFieldMargin">Customer Name :</label>
+                    <input type="text" id="inputCustomerName-" class="form-control inputFieldMargin" placeholder="customer name" aria-label="Customer Name">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-5 margin-bottom">
+                    <label for="inputCity" class="form-label ">City :</label>
+                    <input type="text" id=" -inputCity" class="form-control" placeholder="select city" aria-label="City">
+                </div>
+                <div class="col-7 margin-bottom">
+                    <label for="inputTelephone" class="form-label inputFieldMargin">Telephone :</label>
+                    <input type="text" id="inputTel" class="form-control inputFieldMargin" placeholder="telephone" aria-label="telephone">
+                </div>
+            </div>
+
+            <div class="margin-bottom">
+                <h4 class="purpleTextColor">Item Section</h4>
+                <div id="line1"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-5 margin-bottom">
+                    <label for="inputItemCode" class="form-label">Item Code</label>
+                    <select id="inputItemCode " class="form-select">
+                        <option selected>I001</option>
+                        <option>...</option>
+                    </select>
+                </div>
+                <div class="col-7 margin-bottom">
+                    <label for="inputItemName" class="form-label inputFieldMargin">Item Name :</label>
+                    <input type="text" id="inputItemName " class="form-control inputFieldMargin" placeholder="item name" aria-label="item name">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-5 margin-bottom">
+                    <label for="qtyOnHand" class="form-label">QTY On Hand :</label>
+                    <input type="text" id="qtyOnHand " class="form-control" placeholder="QTY On Hand" aria-label="QTY On Hand">
+                </div>
+                <div class="col-7 margin-bottom">
+                    <label for="orderQTY" class="form-label inputFieldMargin">Order QTY :</label>
+                    <input type="text" id="orderQTY " class="form-control inputFieldMargin" placeholder="order qty" aria-label="orderQTY">
+                </div>
+            </div>
+
+            <div class="col-md-12 marginZero">
+                <label for="inputPrice" class="form-label">Price</label>
+                <input type="text" class="form-control" id="inputPrice " placeholder="price">
+            </div>
+            <div class="col-12">
+                <button id="addToCartBtn" type="submit" class="btn btn-primary btnSize addToCartBtn-color btn-addToCart btn-all"><span> Add To Cart </span></button>
+            </div>
+            <div id="line2"></div>
+
+            <div class="col-6" id="bill">
+                <div id="subDiv" class="titleBill titleOrder">
+                    <h5 class="fonts-size">Billing Your Order</h5>
+                </div>
+
+                <div class=" itemsDetails">
+                    <div class="col-6 ">
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                    </div>
+
+                    <div id="itemPriceListMainDiv" class="col-6">
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                    </div>
+                </div>
+
+                <div id="pricesMainDiv" class="col-12">
+                    <div class="billPricesLabel col-6">
+                        <h4 class="margin-bottom">Sub Total</h4>
+                        <h4 class="margin-bottom">Discount</h4>
+                        <h4 class="margin-bottom">Balance</h4>
+                    </div>
+
+                    <div class="billPrices col-6 pricesContentPosition">
+                        <h5 class="prices margin-bottom">0.00</h5>
+                        <h5 class="prices margin-bottom">0.00</h5>
+                        <h5 class="prices">0.00</h5>
+                    </div>
+                </div>
+
+                <div id="billBtn" class="col-12">
+                    <button id="cancelBtn" type="submit" class="btn btn-primary btnSize custom-btn cancelBtn-color btn-cancel btn-all"><span> Cancel </span></button>
+                    <button id="purchaseBtn" type="submit" class="btn btn-primary inputFieldMargin btnSize purchaseBtn-color btn-purchase btn-all"><span> Purchase </span></button>
+                </div>
+            </div>
+        </form>
+    </div>
+</section>
 
 <!--dashboard-->
 <section id="dash-sec" class="">
@@ -1487,8 +1626,10 @@
 <script src="assets/lib/jquery-3.7.1.min.js"></script>
 <script>
     $('#customer-sec').css({display:'none'})
-    $('#customerTab').on('click' , () =>{
+
+    $('#customer-tab').on('click' , () =>{
         $('#customer-sec').css({display:'block'})
+        $('#placeOrder-sec').css({display:'none'})
         $('#dash-sec').css({display:'none'})
         $('#footer').css({display: 'none'})
         $('#store-sec').css({display:'none'})
@@ -1497,6 +1638,16 @@
     $('#store-sec').css({display:'none'})
     $('#store-tab').on('click' , () => {
         $('#store-sec').css({display:'block'})
+        $('#placeOrder-sec').css({display:'none'})
+        $('#customer-sec').css({display:'none'})
+        $('#dash-sec').css({display:'none'})
+        $('#footer').css({display:'none'})
+    })
+
+    $('#placeOrder-sec').css({display:'none'})
+    $('#placeOrder-tab').on('click' , () => {
+        $('#placeOrder-sec').css({display:'block'})
+        $('#store-sec').css({display:'none'})
         $('#customer-sec').css({display:'none'})
         $('#dash-sec').css({display:'none'})
         $('#footer').css({display:'none'})
