--- a/index.html
+++ b/index.html
@@ -693,10 +693,10 @@
                     <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
                         <div class="navbar-nav position container topBotomBordersIn">
                             <span id="dashboard-tab" class="nav-link active" aria-current="page" href="">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                            <span id="customer-tab" class="nav-link active" href="customerManage.html">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                            <span id="store-tab" class="nav-link active" href="storeManage.html">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                            <span id="placeOrder-tab" class="nav-link active" href="placeOrderManage.html">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                            <span class="nav-link active" href="#about">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span id="customer-tab" class="nav-link active">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span id="store-tab" class="nav-link active">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span id="placeOrder-tab" class="nav-link active">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span class="nav-link active">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 
                         </div>
                         <div id="profileDropdown" class="dropdown">
