--- a/index.html
+++ b/index.html
@@ -1304,7 +1304,7 @@
 <!--dashboard-->
 <section id="dash-sec" class="">
     <div class="row margin fonts">
-        <div id="div1" class="card shadow col-xs card-container">
+        <div id="div1" class="card shadow col-md-5 card-container">
             <div>
                 <h2 class="cardText">00</h2>
                 <h5 class="cardText">Total Orders</h5>
@@ -1312,7 +1312,7 @@
             <div class="back">You can check here<br> the number of orders we<br> have received so far</div>
         </div>
 
-        <div class="card shadow col-xs card-container">
+        <div class="card shadow col-md-5 card-container">
             <div id="div2" class="">
                 <h2 class="cardText" id="customer">00</h2>
                 <h5 class="cardText">Total Customers</h5>
@@ -1320,7 +1320,7 @@
             <div class="back">The number of customers<br> registered in our system<br> so far can be checked here.</div>
         </div>
 
-        <div class="card shadow col-xs card-container">
+        <div class="card shadow col-md-5 card-container">
             <div id="div3" class="">
                 <h2 class="cardText">00</h2>
                 <h5 class="cardText">Total Income</h5>
