--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
         @media all and (min-width: 426px) and (max-width: 768px){
             .tableTitleParent{
-                position: relative;
-                left: 300px;
-                top: 100px;
+                /*position: relative;*/
+                /*left: 300px;*/
+                /*top: 100px;*/
             }
         }
 
@@ -186,6 +186,10 @@
                 width: 89vw;
             }
 
+            .w-900{
+                width: 900px;
+            }
+
             .tableDiv{
                 max-height: 240px; /* Set the maximum height of the container */
                 overflow-y: auto; /* Enable vertical scrolling */
@@ -310,7 +314,7 @@
                 position: relative;
             }
 
-            #d1{
+            .tableTitleParent{
                 z-index: -1;
                 position: relative;
                 left: 700px;
@@ -675,8 +679,8 @@
             }
 
             #d1{
-                position: absolute;
-                width: fit-content;
+                /*position: absolute;*/
+                /*width: fit-content;*/
             }
 
             .viewWidth{
@@ -1019,9 +1023,9 @@
         </div>
     </div>
 
-    <div class="row tableTitleParentDiv">
-        <div class="row margin col-sm-4 col-xs tableTitleSubDiv">
-            <h4 class="viewStoreTableTitle">View Items</h4>
+    <div class="row w-900">
+        <div class="margin tableTitleParent">
+            <h4 class="tableStoreTitle">View Items</h4>
         </div>
     </div>
 
