--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
                 width: 200px;
             }
 
+            #line1{
+                width: 280px;
+            }
 
+            #line2{
+               left: 242px;
+            }
+
+            #billBtn{
+                padding-left: 60px;
+            }
 
             #DashGroStore{
                 font-size: 30px;
@@ -384,8 +394,6 @@
                 opacity: 0;
                 transition: all 0.3s;
             }
-
-
 
             div.topBotomBordersIn span:before
             {
