--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
         @media all and (min-width: 376px) and (max-width: 425px){}
 
         @media all and (min-width: 426px) and (max-width: 768px){
-            .tableTitleParent{
-                /*position: relative;*/
-                /*left: 300px;*/
-                /*top: 100px;*/
+            .titleOrder{
+                position: absolute;
+                /*top: -100px;*/
             }
         }
 
@@ -1228,11 +1227,11 @@
 
 <!--Place order-->
 <section id="placeOrder-sec">
+    <div class="titleOrder container">
+        <h3 class="purpleTextColor">Place Your Orders</h3>
+    </div>
     <div class="col-6 placeOrderForm">
         <form class="row g-3 ">
-            <div class="titleOrder container">
-                <h3 class="purpleTextColor">Place Your Orders</h3>
-            </div>
             <div class="col-12 margin-bottom">
                 <label for="inputOrderId" class="form-label">Order Id :</label>
                 <input type="text" class="form-control" id="inputOrderId-" placeholder="O001">
