--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
 
         @media all and (min-width: 376px) and (max-width: 425px){}
 
-        @media all and (min-width: 426px) and (max-width: 768px){
-            .titleOrder{
-                position: absolute;
-                /*top: -100px;*/
-            }
+        @media all and (min-width: 426px) and (max-width: 768px) {
         }
 
         @media all and (min-width: 769px) and (max-width: 1024px){
@@ -42,6 +38,10 @@
 
             #billBtn{
                 padding-left: 60px;
+            }
+
+            #addToCartBtn{
+                margin-top: 70px;
             }
 
             #DashGroStore{
@@ -408,8 +408,25 @@
             }
         }
 
-        @media all and (max-width: 1440px) {
+        @media all and (min-width: 1025px) and (max-width: 1366px) {
+            .profile{
+                width: 78px;
+                height: 75px;
 
+                border-radius: 100%;
+                margin: 0;
+                padding: 0;
+
+                position: relative;
+                top: 0px;
+                left: 320px;
+            }
+        }
+
+        @media all and (min-width: 1367px) and (max-width: 1440px) {
+            #bill{
+                top: 145px;
+            }
 
             #DashGroStore{
                 font-size: 30px;
